Update with new version

--- a/workshop/security/ssl-tls/node1.conf
+++ b/workshop/security/ssl-tls/node1.conf
@@ -3,9 +3,9 @@ storage:
 net:
   bindIp: localhost
   port: 27001
-  ssl:
-    mode: requireSSL
-    PEMKeyFile: mongodb.pem
+  tls:
+    mode: requireTLS
+    certificateKeyFile: mongodb.pem
     CAFile: rootCA.pem
 systemLog:
   destination: file
